data/derived/sp14/progs/unify/prog3922.ml.out
Characters 30-35:
  let f a x = a^2 + x in
                ^^^^^
Error: This expression has type int but an expression was expected of type
         string
